@@ -1,3 +1,7 @@
+2006-10-07  Ales Hakl  <ales at hakl dot net>
+
+	* src/native.c (native_filter): filter function
+
 2006-10-05  Ales Hakl  <ales at hakl dot net>
 
 	* lib/regex.c (native_regex_substrings_once): removed REG_NOSUB
